--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: Deploy Parazit Off Project
+name: Deploy ParazitOFF Landing
 
 on:
   push:
-    branches: ["main", "master"]
+    branches: ["**"]
 
 permissions:
   contents: write
@@ -24,36 +24,29 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
 
       - name: 📦 Kutubxonalarni o'rnatish
-        run: npm install --legacy-peer-deps
+        run: npm ci
 
       - name: 🏗️ Loyihani Build qilish
         run: npm run build
 
-      - name: 🚀 Serverni tayyorlash va Deploy
+      - name: 🚀 Serverga Deploy qilish
         run: |
-          # Serverdagi asosiy yo'l
-          TARGET_DIR="/home/user/Projects/Euphoria/lands/parazit-off.uz"
-          
-          echo "Checking directory: $TARGET_DIR"
-          
-          # Agar papka o'chirilgan bo'lsa, qayta yaratamiz
+          TARGET_DIR="/home/user/Projects/Euphoria/lands/parazit-off-landing.uz"
           mkdir -p $TARGET_DIR
           
-          # Build papkasini tekshirish
           if [ -d "out" ]; then
             SOURCE_DIR="out"
           elif [ -d ".next" ]; then
             SOURCE_DIR=".next"
           else
-            echo "❌ Xato: Build natijasi (out yoki .next) topilmadi!"
+            echo "❌ Build papkasi topilmadi!"
             exit 1
           fi
           
-          # Fayllarni tozalash va nusxalash
-          echo "Copying files from $SOURCE_DIR to $TARGET_DIR..."
+          echo "Deploying from $SOURCE_DIR to $TARGET_DIR..."
           rm -rf $TARGET_DIR/*
           cp -r $SOURCE_DIR/* $TARGET_DIR/
-          
-          echo "✅ Deploy muvaffaqiyatli yakunlandi!"
+          echo "✅ ParazitOFF muvaffaqiyatli yakunlandi!"
